--- a/jws-jpa/jws-jpa-json/.project
+++ b/jws-jpa/jws-jpa-json/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jdbc</name>
+	<name>jws-jpa-json</name>
 	<comment></comment>
 	<projects>
 	</projects>
